--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,8 @@
   "tabWidth": 2,
   "printWidth": 100,
   "arrowParens": "avoid",
-  "quoteProps": "consistent"
+  "quoteProps": "consistent",
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
