Add an import sorter for Prettier

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,7 +6,15 @@
   "printWidth": 100,
   "arrowParens": "avoid",
   "quoteProps": "consistent",
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ]
+  "importOrder": [
+    "<BUILTIN_MODULES>",
+    "<THIRD_PARTY_MODULES>",
+    "^@core/(.*)$",
+    "^@server/(.*)$",
+    "^@ui/(.*)$",
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"]
 }
